After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 748080 - GtkAppChooserWidget shows same application several times
GtkAppChooserWidget shows same application several times
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkAppChooser
3.16.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
Cosimo Cecchi
Depends on:
Blocks:
 
 
Reported: 2015-04-17 20:40 UTC by Vasily Khoruzhick
Modified: 2015-09-22 22:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot.jpg (62.86 KB, image/jpeg)
2015-04-17 20:40 UTC, Vasily Khoruzhick
Details

Description Vasily Khoruzhick 2015-04-17 20:40:19 UTC
Created attachment 301874 [details]
screenshot.jpg

Reproducible with http://valadoc.org/#!api=gtk+-3.0/Gtk.AppChooserWidget or with auto-move-windows gnome-shell extension prefs.
Comment 1 Vasily Khoruzhick 2015-09-22 19:22:36 UTC
Matthias, could you please point me to a commit that fixes this issue?
Comment 2 Matthias Clasen 2015-09-22 19:40:41 UTC
git log will show it easily. its the tip of master
Comment 3 Vasily Khoruzhick 2015-09-22 19:53:42 UTC
Thanks, now there're no duplicates! However there's still "No applications found" label on background. Should I open another bug for it?
Comment 4 Matthias Clasen 2015-09-22 19:58:07 UTC
I've seen that with the extension prefs, but it does not reproduce in testappchooser.c in the gtk tree.
Comment 5 Matthias Clasen 2015-09-22 20:02:25 UTC
Oh, I see. The 'no apps' placeholder shows up because the extension prefs dialog calls show_all.
Comment 6 Vasily Khoruzhick 2015-09-22 22:03:32 UTC
Works fine now. Thanks!